# DDRTree_py

./: .gitignore  test.ipynb  test.py
DDRTree/: setup.py  test.py
DDRTree/ddr_tree/: ddr_tree.py
DDRTree/ddr_tree_py/: __init__.py  ddr_tree.py
DDRTree/ddr_tree_py/_core/: DDRTree.cpp  DDRTree.h
DDRTree/tests/: __init__.py  test.py  test_ddr_tree.py
Python/: ddr_tree.py  lib.rs  test.ipynb  test_DDRTree_pca.py
Python/tests/cupy/: test.ipynb
Python/tests/matrix_mult/: Cargo.toml  build.ipynb  test.py
Python/tests/matrix_mult/src/: lib.rs
Python/tests/numba_mult/: numba_mult.py  test.py
Python/tests/numba_sparse_mult/: numba_sparce_mult.py  test.ipynb  test.py
Python/tests/sparse_module/: Cargo.toml  build.ipynb  test.py
Python/tests/sparse_module/src/: lib.rs
Python/tests/sparse_mult/: Cargo.toml  build.ipynb  test.py
Python/tests/sparse_mult/src/: lib.rs
Python/tests/sparse_mult_cpp/: sparse_matrix_multiply  sparse_matrix_multiply.cpp  test.ipynb
cpp_test/: DDRTree.cpp  DDRTree.h  compile.sh  compile_log.txt  hello.cpp  test_ddr_tree.cpp
cpp_test/.cph/: .hello.cpp_df2a1928ab1890d3fa62d70e94ae4122.prob
preprocess/: trajectory.R
src/: DDRTree.cpp  test.py  test_ddr_tree.cpp
test/: test.py
test/cpp_call_python/: CMakeLists.txt  example  example.cpp  example.ipynb
test/ddrtreecpp_call_pypca/: Build_DDRTree_cpp.ipynb  Build_DDRTree_py.ipynb  ddr_tree.ipynb  py_ddr_tree.py  test.py  test_DDRTree_py_pca.cpp  test_DDRTree_py_sqdist.cpp  test_ddr_tree_cpp.py  test_ddr_tree_py.py  test_pca_py.py  utils.py
test/ddrtreecpp_call_pypca/DDRTree_cpp/: CMakeLists.txt  DDRTree.cpp  Pybind11Exports.cpp
test/ddrtreecpp_call_pypca/DDRTree_py/: CMakeLists.txt  DDRTree.py  Pybind11Exports.py  __init__.py
test/pybind11/: setup.py
test/python_call_cpp/: example.cpp  example.ipynb  example.py  setup.py
test/test_RcppEigen_API/: DDRTree.cpp  DDRTree.h  DDRTree_wrapper.cpp  pca_projection_py.py  setup.py  sqdist_py.py
test/test_ddrtree/: DDRTree.cpp  DDRTree_wrapper.cpp  setup.py  start.sh  test.py  unit_ddr_tree_test.py
test/test_ddrtree/ddr_tree/: DDRTree_wrapper.cpp  py_ddr_tree.py  setup.py  test_ddr_tree_cpp.py  test_ddr_tree_py.py
test/unit_test/: compile.sh
test_ddrtree/: DDRTree.h
test_pybind11/: example.cpp  test.py
